--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,8 @@
 plugins {
     id 'com.android.application'
+    id 'com.appscms.OtasdkPlugin'
+    id "org.sonarqube"
+
 }
 
 android {
@@ -28,6 +31,14 @@ android {
     }
 }
 
+sonarqube {
+    properties {
+        property "sonar.projectKey", "gunjan-jha_Coffee-ordering-App"
+        property "sonar.organization", "gunjan-jha"
+        property "sonar.host.url", "https://sonarcloud.io"
+    }
+}
+
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
@@ -36,4 +47,6 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation files('/media/gunjan/F270DCFB70DCC80D/AndroidStudio Projects/otasdk-android/otasdk/build/outputs/aar/otasdk-release.aar')
 }
